--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ button:hover {
 
         /* Apply a background color and font to the body */
         body {
-            background-color: #ffffff;
+            background-color: #16197b;
             font-family: Arial black, sans-serif;
             line-height: 1.6;
         }
@@ -428,7 +428,7 @@ button:hover {
             width: 90%;
             padding: 15px;
             margin-bottom: 20px;
-            border: 2px solid #A3181D;
+            border: 2px solid #ffffff;
             border-radius: 5px;
             font-size: 16px;
         }
