--- a/index.html
+++ b/index.html
@@ -588,12 +588,12 @@ button:hover {
 
 
  <br/>
-          <a  onclick="window.open('https://reemebal.com/4/7273011')" href="https://last-stepz.blogspot.com/" >
+          <a  onclick="window.open('https://reemebal.com/4/7273011')" href="https://reemebal.com/4/7273011" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="black">GET YOUR GRANT</font></button>
                     </a><br/>
           
 
-          <a  onclick="window.open('//reemebal.com/4/7273011')" href="https://last-stepz.blogspot.com/" >
+          <a  onclick="window.open('//reemebal.com/4/7273011')" href="https://reemebal.com/4/7273011" >
                     <button style="display: flex;align-items: center;justify-content: center;margin: 0;width: 100%;" class="btn btn-primary"><font color="black">APPLY AGAIN</font></button>
                     </a><br/>
           
