--- a/index.html
+++ b/index.html
@@ -349,40 +349,22 @@ button:hover {
     background-color: rgb(215, 59, 27);
     color: #ffffff;
 }
-</style>
-  
-  
-   <style>
-input[type=text], select {
+<style> 
+input[type=text] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
   box-sizing: border-box;
 }
-
-input[type=submit] {
-  width: 100%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-
-div {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
+	 /* Style the textarea */
+        textarea {
+            width: 90%;
+            padding: 15px;
+            margin-bottom: 20px;
+            border: 2px solid #A3181D;
+            border-radius: 5px;
+            font-size: 16px;
+        }
 </style>
 
 
