--- a/index.html
+++ b/index.html
@@ -349,39 +349,81 @@ button:hover {
     background-color: rgb(215, 59, 27);
     color: #ffffff;
 }
-<style>
-input[type=text], select {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
+</style>
+  
+  
+    <style>
+        /* Reset some default styles */
+        body, h1, h2, h3, p, ul, li {
+            margin: 0;
+            padding: 0;
+        }
 
-input[type=submit] {
-  width: 100%;
-  background-color: #ffff;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
+        /* Apply a background color and font to the body */
+        body {
+            background-color: #ffffff;
+            font-family: Arial black, sans-serif;
+            line-height: 1.6;
+        }
 
-input[type=submit]:hover {
-  background-color: #ffff;
-}
+        /* Style the header */
+        .header {
+            text-align: center;
+            background-color: black;
+            color: #fff;
+            padding: 40px 0;
+        }
 
-div {
-  border-radius: 5px;
-  background-color: #ffff;
-  padding: 20px;
-}
+        /* Style the main content container */
+        .content-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 0px;
+        }
 
-	 /* Style the textarea */
+        /* Style the image container */
+        .image-container {
+            max-height: 600px; /* Set a fixed maximum height */
+            overflow: hidden; /* Hide overflow if image is larger */
+            text-align: center;
+            background-color: green; /* Background color for the image container */
+        }
+
+        .image-container img {
+            max-width: 100%;
+            height: auto; /* Maintain image aspect ratio */
+        }
+
+        /* Style the text container */
+        .text-container {
+            width: 90%;
+            padding: 30px;
+            background-color: #A3181D;
+            border: 1px solid #A3181D;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        /* Style the form */
+        form {
+            max-width: 500px;
+            margin: 0 auto;
+        }
+
+        /* Style the form input fields */
+        input[type="text"],
+        select {
+            width: 90%;
+            padding: 15px;
+            margin-bottom: 20px;
+            border: 2px solid #A3181D;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        /* Style the textarea */
         textarea {
             width: 90%;
             padding: 15px;
@@ -389,6 +431,33 @@ div {
             border: 2px solid #A3181D;
             border-radius: 5px;
             font-size: 16px;
+        }
+
+        /* Style the submit button */
+        .button {
+            background-color: #808183;
+            color: #fff;
+            border: none;
+            padding: 15px 30px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 18px;
+        }
+
+        /* Style the grant information */
+        .grant-info {
+            margin-top: 30px;
+            color: black;
+            text-align: left;
+        }
+
+        /* Style the footer */
+        .footer {
+          width: 106%;
+            background-color: #A3181D;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
         }
 </style>
 
@@ -423,15 +492,15 @@ div {
      <p><font color="white">COMPLETE THE FORM BELOW TO GET GRANT</p>
                  <br/>
                 </p>
-          <center><input type="text" id="fname" name="firstname" placeholder="Your name..">
+          <center><input type="text" id="fname" name="firstname" placeholder="Your name.." required>
                  <select style="width: auto;">
 		<option>-----SELECT GENDER-----</option><br/>
 
                    <option value="Airtel">MALE</option><br/>
              <option value="mtn">FEMALE</option><br/>
   
-              <center><input type="text" id="fname" name="firstname" placeholder="Your name.."> 
-              <center><input type="text" id="fname" name="firstname" placeholder="Your name..">
+              <center><input type="text" id="fname" name="firstname" placeholder="Your name" required> 
+              <center><input type="text" id="fname" name="firstname" placeholder="Your name.." required>
                
                 
   
